--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -7,7 +7,8 @@ $mb     : 1rem;
 contiene las medidas que vamos a manejar para nuestras pantallas ya dependera
 de nosotros que medidas vamos a tomar porque */
 $breakpoints : (
-        small : 320px,
+        
+        small : 370px,
         medium: 640px,
         large : 960px,
         xlarge: 1440px
@@ -24,11 +25,13 @@ $breakpoints : (
 
 //Paleta de colores
 :root{
-//     ---color: #00A24D;
-//     ---color:#A8CF45;
-//     ---color: #E4735B;
-//     ---color:#333333;
-// 
+    --bright-red: hsl(12,88%,59%);
+    --dark-blue: hsl(228,39%,23%);
+
+    --dark-grayish-blue: hsl(227, 12%, 61%);
+    --very-dark-blue: hsl(233, 12%, 13%);
+    --very-pale-red: hsl(13, 100%, 96%);
+    --vary-light-gray: hsl(0, 0%, 98%);
 }
 
 //Variables de tipografia 
