--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,4 +4,6 @@
 @import "layout/grid";
 @import "theme/theme";
 @import "components/components";
+@import "components/header";
+@import "components/button";
 
