Secciones about,testimonial,start movil terminado
Estas secciones estan terminados en la vista movil. Queda pendiente el menu

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,16 +1,16 @@
 .button{
-    padding:1rem 2rem;
-    width: 200px;
-    // margin:0 auto 1rem ;
+    padding:.8rem;
+    width: 170px;
     border-radius: 40px;
     color:white;
     font-weight: 600;
-    &-started{
-       background-color: var(--bright-red); 
-       @include media(medium){
-            // margin-right:1rem; 
-       }
-    }
+    // &--started{
+    //     // @extend %button; 
+    //    background-color: var(--bright-red); 
+    //    @include media(medium){
+    //         // margin-right:1rem; 
+    //    }
+    // }
     // &-Mac{
     //     background-color: var(--Light-Blue);
     // }
@@ -18,11 +18,10 @@
     // &-Mac:hover, &-iOS:hover{
     //     opacity: 0.9;
     // }
-    
-    // @include media(small){
-    //     width:45%; 
-    // }
-    // @include media(medium){
-    //     width:30%; 
-    // }
+
+}
+
+.button-started{
+    @extend .button;
+    background-color: var(--bright-red); 
 }
