--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,4 +6,7 @@
 @import "components/components";
 @import "components/header";
 @import "components/button";
+@import "components/about";
+@import "components/testimonial";
+@import "components/start";
 
