Menu hambuger terminado
Menu hamburger terminado con efecto de difuminado, se implementa acciones
con JS para abrir y cerrar el menu

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,7 @@
 
 body{
     margin:0;
-    @include font('Be Vietnam',normal,400,normal,normal)
+    @include font('Be Vietnam',normal,400,normal,normal);
 }
 
 a{
