Header responsive desktop
Se creo el responsive para nuestro header, junto con el menu
Cuando llega a versión desktop el menu se cambia a manera horizontal
y alineado, separado del header

A partir de aquí hay que revisar el tema del scroll dejamos en la etiqueta un important
porque hay conflictos cuando en el menú abrimos y luego extendemos hasta desktop, el JS
donde se le quita el scroll entra en conflicto si es que el menu no se cierra

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,6 +6,9 @@
 body{
     margin: 0;
     @include font('Be Vietnam',normal,400,normal,normal);
+    @include media(830px){
+         overflow-y:scroll!important; 
+    }
 }
 
 a{
