Todas las secciones terminadas
Todas las secciones se terminaron en vista desktop y movil

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -11,6 +11,15 @@
     background-color: var(--bright-red);
 }
 
+.button-header{
+    @extend .button-started;
+    display: none;
+
+    @include media(1095px){
+          display: block;
+    }
+}
+
 .button--footer{
     @extend .button-started;
     width  : 100px;
