--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@
 @import "components/components";
 @import "components/header";
 @import "components/button";
+@import "components/banner";
 @import "components/about";
 @import "components/testimonial";
 @import "components/start";
