--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,5 +1,10 @@
 .about{
-
+    
+    
+    @include media(large){
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+    }
     &__title, &__paragraph{
         padding: 0 3rem;
     }
