--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,38 +1,81 @@
 .footer{
     background-color: var(--very-dark-blue);
-
+    @include media(large){
+        display              : grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows   : 2;
+        justify-content      : space-around;
+        align-items          : center;
+        padding              : 3rem;
+    }
     &__form{
         padding        : 3rem 1rem 0;
         display        : flex;
         justify-content: space-evenly;
+        @include media(large){
+            grid-column: 3/4;
+            grid-row   : 1/1;
+            align-self : start;
+        }
+        position: relative;
+        &::after{
+            position: absolute;
+            content: 'Por favor ingresa un correo válido';
+            top:5.5rem;
+            left:1rem;
+            color:red;
+            animation-name    : fade;
+            animation-duration: 1s;
+        }
     }
 
     &__nav{
-        display        : flex;
-        justify-content: space-between;
-        margin         : 0 3rem 3rem;
+            display        : flex;
+            justify-content: space-between;
+            margin         : 0 3rem 3rem;
+        @include media(large){
+            grid-column: 2/3;
+            grid-row   : 1/1;
+        }
     }
 
     &__about{
-        
+       @include media(large){
+        grid-column: 1/2;
+        grid-row   : 1/1;
+        display: grid;
+       }
     }
 
     &__icons{
         display        : flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         padding        : 0 2rem;
         margin-bottom  : 4rem;
+        @include media(large){
+            grid-row: 2/3;
+        }
+
     }
+
     &__logo{
         display      : block;
         width        : 220px;
         margin-left  : auto;
         margin-right : auto;
         margin-bottom: 3rem;
+        @include media(large){
+            grid-row: 1/1;
+        }
     }
 
     &__images{
         width: 2.5rem;
+        @include media(large){
+            width       : 1.5rem;
+            margin-left : auto;
+            margin-right: auto;
+
     }
 
 }
@@ -41,6 +84,7 @@
     width       : 90%;
     height      : 40px;
     margin-right: 1rem;
+
 }
 
 .nav__item{
@@ -54,4 +98,12 @@
     text-align    : center;
     color         : var(--dark-grayish-blue);
     padding-bottom: 2.5rem;
+    @include media(large){
+        grid-row   : 1/3;
+        grid-column: 3/4;
+        align-self : end;
+    }
 }
+
+}
+
