--- a/src/scss/components/_start.scss
+++ b/src/scss/components/_start.scss
@@ -1,17 +1,34 @@
 .content__start{
     background-color: var(--bright-red);
     height          : auto;
-}
+    background-image: url(/images/bg-simplify-section-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    // background-position: 200px -20px ;
+}   
 .content__padding{
     padding: 7rem 2rem;
+    
+        @include media(large){
+            display        : flex;
+            justify-content: space-around;
+            align-items    : center;
+        }
+    
 }
 .start__title{
     color    : var(--very-pale-red);
     font-size: 2.8rem;
+    @include media(large){
+        align-self: flex-start;
+        width     : 549px;
+        text-align: left;
+    }
 }
 
 .button__start{
     @extend .button-started;
     background-color: var(--very-pale-red);
     color           : var(--bright-red);
+    align-self      : center;
 }
