--- a/src/scss/components/_testimonial.scss
+++ b/src/scss/components/_testimonial.scss
@@ -1,38 +1,74 @@
 .card{
     padding: 0 4rem;
 
-    &__items:nth-child(1){
-        display: block;
+    @include media(large){
+        grid-template-columns: 1fr 1fr 1fr;
+        gap                  : 60px;
+        display              : grid;
     }
+    
     &__items{
         margin-bottom: 2rem;
-        display: none;
+        display      : none;
+        @include media(large){
+            display: inherit;
+        }
+    }
+
+    &__items:nth-child(4){
+        @include media(large){
+            display: none;
+        }
     }
     &__img{
-        width: 3rem;
-        margin:0 auto 1rem;
+        width  : 3rem;
+        margin : 0 auto 1rem;
         display: block;
     }
     &__name{
-        color:var(--dark-blue);
+        color      : var(--dark-blue);
         font-weight: 700;
     }
 
     &__slide{
-        width: 100%;
-        height: 2rem;
-        margin-bottom: 1rem;
-        display: flex;
+        width          : 100%;
+        height         : 2rem;
+        margin-bottom  : 1rem;
+        display        : flex;
         justify-content: center;
 
+        @include media(large){
+              display: none;
+        }
     }
 }
 
 .slide__item{
-    display: block;
-    height: 10px;
-    width: 10px;
+    display      : block;
+    height       : 10px;
+    width        : 10px;
     border-radius: 50%;
-    border:1px solid var(--bright-red);
-    margin: 0 5px;
+    border       : 1px solid var(--bright-red);
+    margin       : 0 5px;
+}
+
+.display-none{
+    display: none;
+}
+.display-block{
+    display: block;
+}
+
+.fade{
+    animation-name    : fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade{
+    from{
+        opacity: .1;
+    }
+    to{
+        opacity: 1;
+    }
 }
