Fix en tamaños de fuentes y estados de hover

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -86,6 +86,12 @@
 }
 .nav__link{
     color: white;
+
+    @include media(medium){
+          &:hover{
+              color:var(--dark-grayish-blue);
+          }
+    }
 }
 
 .credits{
