--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -59,7 +59,7 @@
         padding    : 1rem;
         color      : var(--very-dark-blue);
         font-weight: 700;
-        font-size  : 1.2rem;
+        font-size  : .9rem;
 
         @include media(1095px){
             &:hover{
